--- a/constance/templates/admin/constance/change_list.html
+++ b/constance/templates/admin/constance/change_list.html
@@ -1,23 +1,20 @@
-{% extends "admin/base_site.html" %}
-{% load adminmedia admin_list i18n %}
-
+{% extends "admin/change_list.html" %}
+{% load adminmedia admin_list i18n staticfiles %}
 
 {% block extrastyle %}
   {{ block.super }}
-  <link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/changelists.css" />
-  <link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
-  {{ media.css }}
-<style>
-#result_list .changed {
-      background-color: #ffc;
-}
-  #changelist table tbody td:first-child {
-      text-align: left;
-}
+
+  <style>
+  #result_list .changed {
+        background-color: #ffc;
+  }
+    #changelist table tbody td:first-child {
+        text-align: left;
+  }
   .help {
-      font-weight: normal !important;
-}
-</style>
+        font-weight: normal !important;
+  }
+  </style>
 {% endblock %}
 
 {% block extrahead %}
@@ -55,7 +52,7 @@
                             {{item.form_field}}
                         </td>
                     <td>
-                        <img src="{% admin_media_prefix %}img/icon-{% if item.modified %}yes{% else %}no{% endif %}.gif" alt="{{ item.modified }}" />
+                        <img src="{% static "admin/" %}img/icon-{% if item.modified %}yes{% else %}no{% endif %}.gif" alt="{{ item.modified }}" />
                     </td>
                     </tr>
                 {% endfor %}
